--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p class="wow Box1-title1" style="color: #00b7ff;">咸鱼MC启动器 sfmcl</p>
     <p class="wow Box1-title2">欢迎玩家的加入</p>
     <p style="color: #ffaa00;">最新版本：v1.2</p>  
+    <a href="http://drive.paimon.cloud/s/6dACY" scrollto="anchor1" class="wow scrollOnClick Box1-title-Buttom" easing="smooth">下载</a>
    </div>
   </div>
   <div class="nutscraftBox Box2">
